--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng test --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
@@ -40,10 +40,13 @@
     "@storybook/addon-links": "^6.2.9",
     "@storybook/angular": "^6.2.9",
     "@testing-library/angular": "^10.7.0",
+    "@testing-library/user-event": "^13.1.9",
+    "@types/faker": "^5.5.5",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "babel-loader": "^8.2.2",
     "codelyzer": "^6.0.0",
+    "faker": "^5.5.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
