--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,9 +8,11 @@
         "project": ["tsconfig.json", "e2e/tsconfig.json"],
         "createDefaultProgram": true
       },
+      "parser": "@typescript-eslint/parser",
       "extends": [
         "plugin:@angular-eslint/recommended",
-        "plugin:@angular-eslint/template/process-inline-templates"
+        "plugin:@angular-eslint/template/process-inline-templates",
+        "plugin:prettier/recommended"
       ],
       "plugins": ["import-helpers", "security", "prettier"],
       "rules": {
